--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -99,9 +99,9 @@
   <header>
     <div class="logo" style="font-size: 1.8em;">Vibing<span>SG</span></div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="toolkits.html">Resources</a>
-      <a href="support.html">Helpline</a>
+      <a href="/index">Home</a>
+      <a href="/toolkits">Resources</a>
+      <a href="/support">Helpline</a>
     </nav>
   </header>
 
