--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -99,7 +99,7 @@
   <header>
     <div class="logo" style="font-size: 1.8em;">Vibing<span>SG</span></div>
     <nav>
-      <a href="/index">Home</a>
+      <a href="/">Home</a>
       <a href="/toolkits">Resources</a>
       <a href="/support">Helpline</a>
     </nav>
