--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -122,7 +122,7 @@
                     <h3 style="color: #7b2ff7;">Journal</h3>
                     <p>Write about your experiences, thoughts, and feelings.</p>
                       <div style="text-align:center; margin-top:20px;">
-                <button class="log-mood" onclick="location.href='/moodtracker'" style="background: linear-gradient(90deg, #7b2ff7, #f107a3); color: white; border: none; padding: 10px 20px; border-radius: 10px; cursor: pointer;">Open Journal</button>
+                <button class="log-mood" onclick="location.href='/journal'" style="background: linear-gradient(90deg, #7b2ff7, #f107a3); color: white; border: none; padding: 10px 20px; border-radius: 10px; cursor: pointer;">Open Journal</button>
             </div>
                 </div>
                 <div class="card toolkit">
