updated passing of mood

--- a/views/pages/moodtracker.ejs
+++ b/views/pages/moodtracker.ejs
@@ -114,7 +114,7 @@
   <main>
 <div class="log-mood-form">
       <h2 class="section-title">Your Mood today</h2>
-      <p>Your mood is logged. You are feeling Happy today.</p>
+      <p>Your mood is logged. You are feeling <strong><%= mood %></strong> today.</p>
     </div>
 
     <div class="mood-tracker">
@@ -126,6 +126,7 @@
     <div class="mood-insights">
       <h2 class="section-title">Mood Recommendations</h2>
       <p><strong>Recommendations</strong></p>
+      
  
       <ul>
         <li>🧘‍♂️ Try deep breathing exercises</li>
