fix image on toolkits.ejs

--- a/views/pages/toolkits.ejs
+++ b/views/pages/toolkits.ejs
@@ -55,7 +55,7 @@
       </div>
 
       <div class="toolkits-card">
-        <img src="/images/ExamTips.png" alt="Exam Preparation Tips" class="video-thumb">
+        <img src="/images/ExamTips.png" alt="Exam Preparation Tips" class="toolkits-thumb">
         <div class="toolkits-content">
           <div class="toolkits-title">Exam Preparation Tips</div>
           <div class="toolkits-desc">Top strategies to study smart, reduce anxiety, and ace your exams.</div>
