--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,12 @@
   <p style="max-width: 700px; margin: auto;">
     A mental wellness platform designed for Singaporean teenagers to manage academic stress through mood tracking, journaling, self-help resources, and educational content.
   </p>
+  <p></p>
+  
+   <p style="max-width: 700px; margin: auto;">
+    Disclaimer:
+This website is created for learning purposes only. The information provided here should not be considered professional advice. Please note that we make no guarantees regarding the accuracy, completeness, or reliability of the contents of this website. Any actions you take based on the contents of this website are at your own risk. We are not liable for any losses or damages incurred from the use of this website.
+  </p>
 </footer>
 
 
