--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,5 +4,15 @@
     <a href="/">Home</a>
     <a href="/toolkits">Resources</a>
     <a href="/support">Helpline</a>
+
+    <!-- Authentication Links -->
+    <% if (user) { %>
+      <span class="nav-user">Hello, <%= user.username %></span>
+      <a href="/logout">Logout</a>
+    <% } else { %>
+      <a href="/login">Login</a>
+      <a href="/register">Register</a>
+    <% } %>
   </nav>
 </header>
+
