--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,19 @@
 <header>
   <div class="logo" style="font-size: 1.8em;">Vibing<span>SG</span></div>
   <nav>
-    <a href="/">Home</a>
-    <a href="/toolkits">Resources</a>
-    <a href="/support">Helpline</a>
-
-    <!-- Authentication Links -->
+      <!-- Authentication Links -->
     <% if (user) { %>
       <span class="nav-user">Hello, <%= user.username %></span>
       <a href="/logout">Logout</a>
     <% } else { %>
       <a href="/login">Login</a>
-      <a href="/register">Register</a>
-    <% } %>
+      <a href="/register">Register</a><% } %>
+    <a href="/">Home</a>
+    <a href="/toolkits">Resources</a>
+    <a href="/support">Helpline</a>
+
+    
+   
   </nav>
 </header>
 
