add card to moodchart

--- a/views/pages/moodtracker.ejs
+++ b/views/pages/moodtracker.ejs
@@ -20,7 +20,7 @@
       <% } %>
     </div>
 
-    <div class="mood-tracker">
+    <div class="log-mood-form">
       <h2 class="section-title">Mood Tracker</h2>
       <canvas id="moodChart" height="100"></canvas>
     </div>
