--- a/views/pages/moodtracker.ejs
+++ b/views/pages/moodtracker.ejs
@@ -6,6 +6,15 @@
   <title>Mood Tracker - VibingSG</title>
   <link rel="stylesheet" href="/css/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MNL58M3HNB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MNL58M3HNB');
+</script>
 </head>
 <body>
   <%- include('../partials/header') %>
