--- a/views/pages/journal.ejs
+++ b/views/pages/journal.ejs
@@ -18,7 +18,7 @@
 <body>
   <%- include('../partials/header') %>
 
-  <main class="log-mood-form">
+  <main class="mood-check">
     <h2 class="section-title">Log Your Journal</h2>
     <p>How are you vibing today?</p>
 
@@ -30,7 +30,7 @@
     </form>
   </main>
 
-  <section class="mood-tracker">
+  <section class="mood-check">
     <h2 class="section-title">Previous Entries</h2>
     <% if (blogs && blogs.length > 0) { %>
       <% blogs.forEach(post => { %>
